- corrected IE overflow layout bug

--- a/sport-war/src/main/webapp/static/sport.css
+++ b/sport-war/src/main/webapp/static/sport.css
@@ -344,6 +344,8 @@ div.autocomplete ul li {
 
 .message {
     margin-top: 0.5em;
+    width: 99%;
+    overflow-x: hidden;
 }
 
 .workout {
